tests/error/modifier_errors/variable_leak.err
Error: Variable not defined (at $FILE:10:11)
   | 
 8 |     with power(1):
 9 |         x = 1
10 |     return x + 2
   |            ^ `x` is not defined

Guppy compilation failed due to 1 previous error
